--- a/MyHomeApp/src/main/webapp/app/admin/user-management/detail/user-management-detail.component.html
+++ b/MyHomeApp/src/main/webapp/app/admin/user-management/detail/user-management-detail.component.html
@@ -48,7 +48,7 @@
         </dd>
       </dl>
 
-      <button type="submit" routerLink="../../" class="btn btn-info">
+      <button type="submit" routerLink="../../" class="btn btn-info bg-info-app">
         <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back">Volver</span>
       </button>
     </div>
