--- a/MyHomeApp/src/main/webapp/app/incidences/kanbakn-incidence/kanbakn-incidence.component.scss
+++ b/MyHomeApp/src/main/webapp/app/incidences/kanbakn-incidence/kanbakn-incidence.component.scss
@@ -79,6 +79,11 @@ html, body {
   border-left: solid 5px red;
 }
 
+.btn-incidence{
+  background-color: #6610f2;
+  color: white;
+}
+
 .rounded-3 {
   border-radius: 0.5rem!important;
 }
