--- a/MyHomeApp/src/main/webapp/content/scss/global.scss
+++ b/MyHomeApp/src/main/webapp/content/scss/global.scss
@@ -281,6 +281,11 @@ dragula css
   background-color: #e8e7ed!important;
 }
 
+.bg-info-app{
+  background-color: #3d8bfd !important;
+  border-color: white;
+}
+
 .border-pending{
   border-left: solid 5px blue;
 }
