--- a/MyHomeApp/src/main/webapp/app/incidences/detail/detail-incidence.component.scss
+++ b/MyHomeApp/src/main/webapp/app/incidences/detail/detail-incidence.component.scss
@@ -64,6 +64,33 @@ color: #262626;
   }
 }
 
+/**
+* BADAGE OUTLINE COLOR
+*/
+.bd-outline-pending{
+  border: rgb(105, 172, 254) solid;
+  color: rgb(105, 172, 254);
+}
+
+.bd-outline-in-progress{
+  border: rgb(255, 207, 17) solid;
+  color: rgb(255, 207, 17);
+}
+
+.bd-outline-pending-confirm{
+  border: rgb(183, 14, 255) solid;
+  color: rgb(183, 14, 255);
+}
+
+.bd-outline-resolved {
+  border: rgb(102, 255, 71) solid;
+  color: rgb(102, 255, 71);
+}
+
+.bd-outline-cancel{
+  border: rgb(255, 53, 18) solid;
+  color: rgb(255, 53, 18);
+}
   /**
 * BACKGROUND COLOR
 */
@@ -77,7 +104,7 @@ color: #262626;
 }
 
 .bg-pending-confirm{
-  background-color: rgb(223, 233, 34);
+  background-color: rgb(183, 14, 255);
 }
 
 .bg-resolved {
@@ -116,20 +143,30 @@ color: #262626;
   transition: all 0.5s ease-in-out;
 }
 
+/*.botonera{
+  width: auto;
+  @media (max-width: 992px) {
+    #button-go-back-id{
+      display: flex;
+      width: 50%;
+      
+    }
+  }
+}*/
+
+@media (max-width: 992px) {
+  #button-go-back-id{
+    width: 95%;
+    margin: 0% 2% 2% 2%;
+  }
+}
 /*@media (min-width: 576px) {  }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {  }*/
 
 // Large devices (desktops, 992px and up)
-@media (max-width: 992px) {
 
-  #button-go-back-id{
-    display: block;
-    width: auto;
-    float: none;
-  }
-}
 
 // X-Large devices (large desktops, 1200px and up)
 /*@media (min-width: 1200px) { ... }
