--- a/MyHomeApp/src/main/webapp/app/incidences/detail/detail-incidence.component.scss
+++ b/MyHomeApp/src/main/webapp/app/incidences/detail/detail-incidence.component.scss
@@ -154,10 +154,13 @@ color: #262626;
   }
 }*/
 
+#button-go-back-id{
+  margin: 0% 2% 2% 2%;
+}
+
 @media (max-width: 992px) {
   #button-go-back-id{
     width: 95%;
-    margin: 0% 2% 2% 2%;
   }
 }
 /*@media (min-width: 576px) {  }
