--- a/MyHomeApp/src/main/webapp/app/incidences/list/list-incidence.component.html
+++ b/MyHomeApp/src/main/webapp/app/incidences/list/list-incidence.component.html
@@ -71,7 +71,7 @@
                   <fa-icon icon="eye"></fa-icon>
                   <!-- <span class="d-none d-md-inline" jhiTranslate="entity.action.view">Vista</span> -->
                 </button>  
-                <button type="submit" [routerLink]="['./', incidence.id, 'edit']" title="{{'entity.action.edit' | translate}}" queryParamsHandling="merge" class="btn btn-primary">
+                <button type="submit" [routerLink]="['./', incidence.id, 'edit']" title="{{'entity.action.edit' | translate}}" queryParamsHandling="merge" class="btn btn-warning">
                   <fa-icon icon="pencil-alt"></fa-icon>
                   <!-- <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Editar</span> -->
                 </button>  
